Fix display problem using z-index

--- a/src/styles/components/_loading.module.scss
+++ b/src/styles/components/_loading.module.scss
@@ -15,7 +15,8 @@
     left:0;
     align-items: center;
     justify-content: center;
-    background-color: rgba(#fff, .5);;
+    background-color: rgba(#fff, .5);
+    z-index: 99;
     display: hidden;
     &__content {
         @include abstracts.display-flex-column;
